[package]
name = "blog_os"
version = "0.1.0"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"


[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"